fixed stretching of pictures in the table

--- a/views/main.css
+++ b/views/main.css
@@ -179,7 +179,8 @@ table tr:hover {background-color:#f5f5f5;}
 /******************************************************/
 .picture-button
 {
-    width:15%;
+    width:50px;
+    height:50px;
 }
 
 button
